# Real_Time_Social_media_Django_Htmx

./: README.md  pyproject.toml
RealTalk/: manage.py
RealTalk/RealTalk/: asgi.py  settings.py  urls.py  wsgi.py
RealTalk/authapi/: admin.py  models.py  urls.py  views.py
RealTalk/authapi/migrations/: 0001_initial.py
RealTalk/core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
RealTalk/core/migrations/: 0001_initial.py
RealTalk/inbox/: admin.py  models.py  urls.py  views.py
RealTalk/scripts/: cloudinary_to_aws.py
RealTalk/templates/: base.html
RealTalk/templates/auth/: profile.html
RealTalk/templates/core/: comment.html  comment_delete.html  home.html  post.html  post_create.html  post_delete.html  post_page.html  reply_delete.html
RealTalk/templates/includes/: header.html  hero.html  sidebar.html
RealTalk/templates/snippets/: loop_home_posts.html  loop_postpage_comments.html  loop_profile_comments.html  loop_profile_posts.html
