[tool.poetry]
name = "real-time-social-media-django-htmx"
version = "0.1.0"
description = ""
authors = ["Takib Yeasar <mdtakibyeasar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
setuptools = "^72.1.0"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.4.0"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"
django-allauth = "^64.0.0"
beautifulsoup4 = "^4.12.3"
cryptography = "^43.0.0"
django-htmx = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
